# zoish

./: .bumpversion.cfg  .bumpversion_bak.cfg  .gitignore  CITATION.cff  Dockerfile.publish  Dockerfile.test  Jenkinsfile  LICENSE  MANIFEST.in  README.md  README.rst  commands.txt  docker-compose.yml  docker-entrypoint.sh  download_data.sh  entrypoint.sh  main.py  noxfile.py  pyproject.toml  requirements_prod.in  requirements_prod.txt  requirements_test.txt  run.sh  setup.py
.github/workflows/: main.yml
catboost_info/: catboost_training.json  learn_error.tsv  test_error.tsv  time_left.tsv
catboost_info/learn/: events.out.tfevents
catboost_info/test/: events.out.tfevents
examples/shap/: LGBMClassifier_binery_example.py  LGBMClassifier_multi_class_example.py  LGBMRegressor_example.py  kernelexplainer_example.py  (+8 more)
tests/: test_ShapPlotFeatures.py  test_big_dataset.py  test_gpboost.py  test_gridshap.py  test_kernelexplainer.py  test_new.py  test_optunashap.py  test_randomshap.py  test_shap_compared_with_other_selector.py  test_shap_compared_with_other_selector_binery_classification.py  test_shap_compared_with_other_selector_binery_classification_fasttreeshap.py  test_shap_compared_with_other_selector_binery_classification_shap.py  test_shap_compared_with_other_selector_multi_classification.py  test_shap_compared_with_other_selector_multi_classification_fasttreeshap.py  test_shap_compared_with_other_selector_regression.py  test_shap_compared_with_other_selector_regression_fasttreeshap.py  test_shap_compared_with_other_selector_regression_optimizer_effect.py  test_shap_feature_selector_with_n_feature.py  test_shap_feature_selector_with_n_feature_fasttreeshap.py  test_shap_feature_selector_with_n_feature_shap.py  test_shap_feature_selector_with_threshold.py  test_shap_feature_selector_with_threshold_fasttreeshap.py  test_shap_feature_selector_with_threshold_shap.py  test_zoish.py  test_zoish_adult_ds.py  test_zoish_audiology_ds.py  test_zoish_audiology_ds_grid_search.py  test_zoish_audiology_ds_optuna.py  test_zoish_audiology_ds_random_search.py  test_zoish_audiology_ds_tune_grid_search.py  test_zoish_audiology_ds_tune_search.py  test_zoish_feature_selector.py  test_zoish_hardware_ds.py  zoish_adult_ds_grid_search.py  zoish_adult_ds_optuna.py  zoish_adult_ds_random_search.py  zoish_adult_ds_tune_grid_search.py  zoish_adult_ds_tune_search.py  zoish_hardware_ds_grid_search.py  zoish_hardware_ds_optuna.py  (+3 more)
xgbse_env/: pyvenv.cfg
zoish/: .env  __init__.py  cli.py  config.yaml  main copy.py  main.ipynb  main.py  model_conf.py  pipeline.py  project_conf.py  version.py
(+66 files in other folders)
