[tool.poetry]
name = "zoish"
version = "4.5.0"
description = "Zoish is a Python package that streamlines machine learning by leveraging SHAP values for feature selection and interpretability, making model development more efficient and user-friendly."

authors = ["drhosseinjavedani <h.javedani@gmail.com>"]
homepage = "https://github.com/drhosseinjavedani/zoish"
license = "BSD 2-Clause License"

readme = "README.md"
keywords = [
    "Auto ML",
    "Feature Selection",
    "Pipeline",
    "Machine learning",
    "shap"
]


[tool.poetry.dependencies]
python = ">=3.8,<3.11"
pandas = "^1.4.3"
numpy = "<1.63.0"
scipy = "^1.8.1"
scikit-learn = "^1.1.1"
click = "^8.1.3"
numba = "^0.55.2"
shap = "^0.41.0"
matplotlib = "^3.5.2"
pip-licenses = "^3.5.4"
python-dotenv = "^0.21.0"
prompt-toolkit = "^3.0.37"


[tool.poetry.group.dev.dependencies]
jupyter = "^1.0.0"
black = {extras = ["jupyter"], version = "^23.1.0"}
ipython = "^8.8.0"
pytest = "^7.4.0"
bump2version = "^1.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

